--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -228,7 +228,7 @@
     </div>
 
     <!-- SEARCH HELPERS -->
-    <h4 data-action='toggle-next' data-icon='extendedSearchIcon'><i id='extendedSearchIcon' class='fas fa-chevron-circle-right'></i> {{ 'Search helpers'|trans }}</h4>
+    <h4 data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-right fa-fw mr-2'></i>{{ 'Search helpers'|trans }}</h4>
     <div hidden class='box mb-1' data-save-hidden='searchHelpersDiv' style='overflow:visible;'>
       <div class='row'>
         <!-- AUTHOR/OWNER HELPER -->
@@ -363,7 +363,7 @@
     </div>
 
     <!-- METADATA SEARCH -->
-    <h4 data-action='toggle-next' data-icon='metadataSearchIcon'><i id='metadataSearchIcon' class='fas fa-chevron-circle-right'></i> {{ 'Extra fields search'|trans }}</h4>
+    <h4 data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-right fa-fw mr-2'></i>{{ 'Extra fields search'|trans }}</h4>
 
 
     <div hidden data-save-hidden='metadataSearchDiv' class='box'>
