--- a/src/templates/show-item.html
+++ b/src/templates/show-item.html
@@ -97,7 +97,7 @@
         {% if item.rating > 0 %}
           <span class='rating-show rounded px-1 mr-1 font-weight-bold'><i class='fas fa-star mr-1' title='☻'></i>{{ item.rating }}</span>
         {% endif %}
-        <span class='item-date'>{{ item.date|date('Y-m-d') }}</span>
+        <span class='item-date color-medium'>{{ item.date|date('Y-m-d') }}</span>
         {% if isPinned %}
           <span title='{{ 'Toggle pin'|trans }}' data-action='toggle-pin' id='toggle-pin-icon-div' class='hl-hover-gray p-1 rounded'>
             <i id='toggle-pin-icon' class='fas fa-thumbtack fa-fw'></i>
