--- a/src/templates/todolist-panel.html
+++ b/src/templates/todolist-panel.html
@@ -5,7 +5,7 @@
     </a>
   </div>
 
-  <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-icon='todolistToggleIcon' class='p-2'><i id='todolistToggleIcon' class='fas fa-chevron-circle-down'></i> {{ 'Todolist'|trans }}</h3>
+  <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-icon='todolistToggleIcon' class='p-2'><i id='todolistToggleIcon' class='fas fa-caret-down'></i> {{ 'Todolist'|trans }}</h3>
 
   <div data-save-hidden='todolistMainDiv'>
     <div class='input-group mt-2 mb-3 p-2'>
@@ -39,14 +39,14 @@
   </div>
 
   <!-- EXPERIMENT STEPS -->
-  <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-icon='todoStepsExperimentIcon' class='p-2'><i id='todoStepsExperimentIcon' class='fas fa-chevron-circle-down'></i> {% trans %}Experiment{% plural 2 %}Experiments{% endtrans %}</h3>
+  <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='p-2'><i class='fas fa-caret-down fa-fw mr-2'></i>{% trans %}Experiment{% plural 2 %}Experiments{% endtrans %}</h3>
   <div data-save-hidden='todoStepsExperiments'><!-- this div is here as a target of the toggle-next, because for some reason 'hidden' doesn't work on a flex container -->
     <!-- id is needed to fill it from Todolist.class.ts -->
     <div id='todoStepsExperiments' class='d-flex flex-column'></div>
   </div>
 
   <!-- ITEMS STEPS -->
-  <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-icon='todoStepsItemIcon' class='p-2'><i id='todoStepsItemIcon' class='fas fa-chevron-circle-down'></i> {{ 'Items'|trans }}</h3>
+  <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='p-2'><i class='fas fa-caret-down fa-fw mr-2'></i>{{ 'Items'|trans }}</h3>
   <div data-save-hidden='todoStepsItem'><!-- this div is here as a target of the toggle-next, because for some reason 'hidden' doesn't work on a flex container -->
     <!-- id is needed to fill it from Todolist.class.ts -->
     <div id='todoStepsItems' class='d-flex flex-column'></div>
