--- a/src/templates/view-edit-toolbar.html
+++ b/src/templates/view-edit-toolbar.html
@@ -129,7 +129,7 @@
 
   {% if not App.Session.has('is_anon') %}
 
-    <div class='ml-auto d-flex'>
+    <div class='ml-auto d-flex align-items-center'>
       {# TOGGLE PIN #}
       <div class='mr-2'>
         <div title='{{ 'Toggle pin'|trans }}' data-action='toggle-pin' id='toggle-pin-icon-div' class='{{ Entity.Pins.isPinned ? 'bgnd-gray' : 'hl-hover-gray' }} p-2 rounded'>
@@ -149,6 +149,7 @@
       </div>
     {% endif %}
 
+    <div class='vertical-separator mx-3'></div>
     <!-- MORE OPTIONS -->
     <div class='dropdown'>
       <div data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}' role='button' title='{{ 'Toggle pin'|trans }}' id='toggle-pin-icon-div' class='hl-hover-gray p-2 px-3 rounded'>
