--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -36,7 +36,7 @@
   {# DATE and RATING #}
   <div class='d-flex'>
     {# DATE #}
-    <div>
+    <div class='color-medium'>
       {{ 'Started on'|trans }} {{ Entity.entityData.date|date('Y-m-d') }}
     </div>
     {# RATING #}
@@ -127,17 +127,25 @@
       <div id='body_view' class='pt-2 text-dark' {{ not displayMainText ? 'hidden' }}>{{ body|raw }}</div>
   {% endif %}
 
-  <!-- METADATA view -->
-  {% if Entity.entityData.metadata %}
-    <hr>
-    <div>
-      {{ Entity.entityData.metadata|formatMetadata }}
-    </div>
-  {% endif %}
-
 </section>
+<div class='d-flex flex-column align-items-end'>
+  {# SHOW LAST MOD #}
+  <div>{{ 'Last modified on %s'|trans|format(Entity.entityData.modified_at) }}</div>
+  {# eLabID #}
+  <div class='elabid'>{{ 'Unique eLabID:'|trans }} {{ Entity.entityData.elabid }}</div>
+</div>
 
 <hr>
+
+<!-- METADATA view -->
+{% if Entity.entityData.metadata %}
+  <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-down fa-fw mr-2'></i>{{ 'Extra fields'|trans }}</h3>
+  <div class='mt-2' id='extraFieldsDiv' data-save-hidden='extraFieldsDiv'>
+    {{ Entity.entityData.metadata|formatMetadata }}
+  </div>
+  <hr>
+{% endif %}
+
 
 {% include 'steps-links-view.html' %}
 
@@ -153,7 +161,7 @@
 <div id='commentsDiv'>
   {% if App.Session.get('is_auth') and not App.Session.has('is_anon') %}
     <div id='comment'>
-    <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-icon='commentsIcon' class='d-inline'><i id='commentsIcon' class='fas fa-chevron-circle-down'></i> {{ 'Comments'|trans }}</h3>
+    <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-down fa-fw mr-2'></i>{{ 'Comments'|trans }}</h3>
     <div class='mt-2' id='commentsInnerDiv' data-save-hidden='commentsInnerDiv'>
         {% for comment in Entity.entityData.comments %}
           <div class='box'>
@@ -183,36 +191,9 @@
         </div>
       </div>
     </div>
-    <hr>
   {% endif %}
 </div>
 
-  <div class='text-right d-flex flex-column'>
-    <!-- CHANGELOG -->
-    <div>
-      <i class='fas fa-list mr-1'></i>
-      <a href='?id={{ Entity.id }}&mode=changelog'>{{ 'See changelog'|trans }}</a>
-    </div>
-
-    <!-- REVISIONS -->
-    {% if revNum > 0 %}
-      <div>
-        <i class='fas fa-history mr-1'></i>
-        <a href='revisions.php?type={{ Entity.type }}&item_id={{ Entity.id }}'>{{ revNum }}
-          {% trans %}revision available{% plural revNum %}revisions available{% endtrans %}</a>
-      </div>
-    {% endif %}
-
-    <!-- SHOW LAST MOD -->
-    <div>
-      <span>{{ 'Last modified on %s'|trans|format(Entity.entityData.modified_at) }}</span>
-    </div>
-
-    <!-- eLabID -->
-    <div>
-      <span class='elabid'>{{ 'Unique eLabID:'|trans }} {{ Entity.entityData.elabid }}</span>
-    </div>
-  </div>
 
 
 <div id='info'
