reworked the templates

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -107,41 +107,11 @@
     </select>
   </div>
 
-  <!-- TAGS -->
-  <div class='d-flex mb-2 align-items-center mathjax-ignore'>
-    <label for='createTagInput' class='col-form-label mr-3 edit-mode-label'>{{ 'Tags'|trans }}</label>
-    <div class='tags form-inline mr-2'>
-      <div id='tags_div_{{ Entity.id }}' class='d-flex flex-wrap mb-1'>
-        <!--  build the tag array -->
-        {% if Entity.entityData.tags|length > 0 %}
-          {% set tagsIdArr = Entity.entityData.tags_id|split(',') %}
-          {% set tagsValueArr = Entity.entityData.tags|split('|') %}
-          {% for tag in tagsValueArr -%}
-            <a class='tag margin-1px hover-danger {{ loop.last ? 'mr-2' }}' data-action='unreference-tag' data-tagid='{{ tagsIdArr[loop.index0] }}'>{{ tag|raw }}</a>
-          {%- endfor -%}
-        {% endif %}
-      </div>
-      <input type='text' id='createTagInput' data-teamid='{{ App.Users.userData.team }}' data-autocomplete='tags' class='createTagInput form-control' placeholder='{{ 'Add a tag'|trans }}' />
-    </div>
-  </div>
+  {# TAGS #}
+  {% include('edit-tags.html') %}
+  {# PERMISSIONS #}
+  {% include('edit-permissions.html') %}
 
-  <hr>
-
-  <!-- PERMISSIONS -->
-  <div class='d-flex mb-2 align-items-center'>
-    <!-- CAN READ -->
-    {% set rw = 'canread' %}
-    {% set can = Entity.entityData.canread|canToHuman %}
-    {% include('view-permissions.html') %}
-  </div>
-  <div class='d-flex mb-2 align-items-center'>
-    <!-- CAN WRITE -->
-    {% set rw = 'canwrite' %}
-    {% set can = Entity.entityData.canwrite|canToHuman %}
-    {% include('view-permissions.html') %}
-  </div>
-
-  <hr>
 
 
   <!-- BODY -->
