--- a/src/templates/templates-view.html
+++ b/src/templates/templates-view.html
@@ -1,3 +1,8 @@
+{# TITLE #}
+<h1 id='documentTitle' class='mb-4 title text-dark'>
+  {{ Entity.entityData.title|raw }}
+</h1>
+{# TAGS #}
 {% if entityData.tags|length > 0 %}
   <span class='tags'><i class='fas fa-tags'></i></span>
   {% set tagsValueArr = entityData.tags|split('|') %}
@@ -6,11 +11,22 @@
   {% endfor %}
 {% endif %}
 
+<hr>
 {% if (Entity.entityData.content_type == constant('Elabftw\\Models\\AbstractEntity::CONTENT_MD')) and Entity.entityData.body is not null %}
   {% set body = Entity.entityData.body|md2html %}
 {% else %}
   {% set body = Entity.entityData.body %}
 {% endif %}
 <div id='body_view'>{{ body|raw }}</div>
-<div id='metadataDiv' class='col-md-6'></div>
+
+{# METADATA view #}
+{% if Entity.entityData.metadata and Entity.entityData.metadata != '{}' %}
+  <hr>
+  <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-down fa-fw mr-2'></i>{{ 'Extra fields'|trans }}</h3>
+  <div class='mt-2' id='extraFieldsDiv' data-save-hidden='extraFieldsDiv'>
+    {{ Entity.entityData.metadata|formatMetadata }}
+  </div>
+  <hr>
+{% endif %}
 {% include 'steps-links-view.html' %}
+<div id='info' data-page='template-view' data-type='experiments_templates' data-id='{{ Entity.id }}'></div>
