--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -328,7 +328,13 @@
 
 <!-- TAB 3 - USER TEMPLATES -->
 <div data-tabcontent='3' hidden>
-  {% include 'show-templates-edit.html' %}
+  <h3 class='p-2 pl-3 section-title'><i class='fas fa-layer-group'></i> {{ 'Experiments Templates'|trans }}</h3>
+
+  {% if App.Request.query.has('templateid') %}
+    {% include 'view-edit-template.html' %}
+  {% else %}
+    {% include 'show-templates-select.html' %}
+  {% endif %}
 </div>
 
 <!-- TAB 4 - API KEYS -->
