--- a/src/templates/view-edit-template.html
+++ b/src/templates/view-edit-template.html
@@ -19,12 +19,14 @@
       </div>
     </a>
   {% else %}
-    {# EDIT #}
-    <a class='mr-2' title='{{ 'Edit'|trans }}' href='?tab=3&mode=edit&templateid={{ Entity.id }}'>
-      <div class='hl-hover-gray p-2 rounded main-action-button'>
-        <i class='fas fa-pencil fa-fw'></i>
-      </div>
-    </a>
+    {% if App.Request.getScriptName|split('/')|last == 'ucp.php' %}
+      {# EDIT #}
+      <a class='mr-2' title='{{ 'Edit'|trans }}' href='?tab=3&mode=edit&templateid={{ Entity.id }}'>
+        <div class='hl-hover-gray p-2 rounded main-action-button'>
+          <i class='fas fa-pencil fa-fw'></i>
+        </div>
+      </a>
+    {% endif %}
   {% endif %}
 
   {# CREATE EXPERIMENT #}
@@ -41,54 +43,65 @@
     </div>
   </div>
 
-  {# RIGHT PART #}
-  <div class='ml-auto d-flex align-items-center'>
-    {# TOGGLE PIN #}
+  {% if App.Request.getScriptName|split('/')|last == 'team.php' %}
+    {# IMPORT #}
     <div class='mr-2'>
-      <div title='{{ 'Toggle pin (add to create button menu)'|trans }}' data-action='toggle-pin' data-id='{{ Entity.id }}' id='toggle-pin-icon-div' class='{{ Entity.Pins.isPinned ? 'bgnd-gray' : 'hl-hover-gray' }} p-2 rounded'>
-        <i id='toggle-pin-icon' class='fas fa-thumbtack {{ not Entity.Pins.isPinned ? 'color-weak' }} fa-fw'></i>
+      <div title='{{ 'Import to your profile'|trans }}' data-action='import-template' data-id='{{ Entity.id }}' class='hl-hover-gray p-2 rounded'>
+        <i class='fas fa-file-import fa-fw'></i>
       </div>
     </div>
+  {% endif %}
 
-    {# LOCK #}
-    {% set lockIcon = 'fa-lock-open' %}
-    {% set alt = 'Lock/Unlock item'|trans %}
-    {% if Entity.entityData.locked %}
-        {% set lockIcon = 'fa-lock' %}
-        {% set alt = Entity.entityData.locked_at %}
-    {% endif %}
-    <div title='{{ alt }}' data-action='toggle-lock' data-id='{{ Entity.id }}' class='{{ Entity.entityData.locked ? 'bgnd-gray' : 'hl-hover-gray' }} p-2 mr-2 rounded'>
-      <i class='fas {{ lockIcon }} fa-fw'></i>
-    </div>
-
-    <div class='vertical-separator mx-3'></div>
-
-    <!-- MORE OPTIONS -->
-    <div class='dropdown'>
-      <div data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}' role='button' title='{{ 'Toggle pin'|trans }}' id='toggle-pin-icon-div' class='hl-hover-gray p-2 px-3 rounded'>
-        <i class='fas fa-ellipsis-v'></i>
+  {# RIGHT PART #}
+    <div class='ml-auto d-flex align-items-center'>
+      {# TOGGLE PIN #}
+      <div class='mr-2'>
+        <div title='{{ 'Toggle pin (add to create button menu)'|trans }}' data-action='toggle-pin' data-id='{{ Entity.id }}' id='toggle-pin-icon-div' class='{{ Entity.Pins.isPinned ? 'bgnd-gray' : 'hl-hover-gray' }} p-2 rounded'>
+          <i id='toggle-pin-icon' class='fas fa-thumbtack {{ not Entity.Pins.isPinned ? 'color-weak' }} fa-fw'></i>
+        </div>
       </div>
 
-      <div class='dropdown-menu dropdown-menu-right' aria-label='{{ 'More options'|trans }}'>
-        <!-- SWITCH EDITOR the data-editor is here to indicate which is the current editor -->
-        <a class='dropdown-item' id='iHazEditor' data-action='switch-editor' data-editor='{{ editor }}' href='#'><i class='fas fa-pencil-alt fa-fw'></i> {{ 'Switch editor'|trans }}</a>
-        <!-- REVISIONS -->
-        {% if revNum > 0 %}
-          <a class='dropdown-item' href='revisions.php?type={{ Entity.type }}&item_id={{ Entity.id }}'><i class='fas fa-history fa-fw'></i> {{ revNum }} {% trans %}revision available{% plural revNum %}revisions available{% endtrans %}</a>
+      {% if App.Request.getScriptName|split('/')|last == 'ucp.php' %}
+        {# LOCK #}
+        {% set lockIcon = 'fa-lock-open' %}
+        {% set alt = 'Lock/Unlock item'|trans %}
+        {% if Entity.entityData.locked %}
+            {% set lockIcon = 'fa-lock' %}
+            {% set alt = Entity.entityData.locked_at %}
         {% endif %}
-        <!-- CHANGELOG -->
-        <a class='dropdown-item' href='?id={{ Entity.id }}&mode=changelog'><i class='fas fa-list fa-fw'></i> {{ 'See changelog'|trans }}</a>
+        <div title='{{ alt }}' data-action='toggle-lock' data-id='{{ Entity.id }}' class='{{ Entity.entityData.locked ? 'bgnd-gray' : 'hl-hover-gray' }} p-2 mr-2 rounded'>
+          <i class='fas {{ lockIcon }} fa-fw'></i>
+        </div>
 
-        {# DELETE #}
-        {% if not Entity.entityData.locked %}
-          <!-- DESTROY -->
-          <div class='dropdown-divider'></div>
-          <a href='#' data-action='destroy-template' class='dropdown-item hover-danger' data-id='{{ Entity.id }}'>
-            <i class='fas fa-trash-alt fa-fw mr-1'></i>{{ 'Destroy template'|trans }}
-          </a>
-        {% endif %}
-      </div>
-    </div>
+        <div class='vertical-separator mx-3'></div>
+
+        <!-- MORE OPTIONS -->
+        <div class='dropdown'>
+          <div data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}' role='button' title='{{ 'Toggle pin'|trans }}' id='toggle-pin-icon-div' class='hl-hover-gray p-2 px-3 rounded'>
+            <i class='fas fa-ellipsis-v'></i>
+          </div>
+
+          <div class='dropdown-menu dropdown-menu-right' aria-label='{{ 'More options'|trans }}'>
+            <!-- SWITCH EDITOR the data-editor is here to indicate which is the current editor -->
+            <a class='dropdown-item' id='iHazEditor' data-action='switch-editor' data-editor='{{ editor }}' href='#'><i class='fas fa-pencil-alt fa-fw'></i> {{ 'Switch editor'|trans }}</a>
+            <!-- REVISIONS -->
+            {% if revNum > 0 %}
+              <a class='dropdown-item' href='revisions.php?type={{ Entity.type }}&item_id={{ Entity.id }}'><i class='fas fa-history fa-fw'></i> {{ revNum }} {% trans %}revision available{% plural revNum %}revisions available{% endtrans %}</a>
+            {% endif %}
+            <!-- CHANGELOG -->
+            <a class='dropdown-item' href='?id={{ Entity.id }}&mode=changelog'><i class='fas fa-list fa-fw'></i> {{ 'See changelog'|trans }}</a>
+
+            {# DELETE #}
+            {% if not Entity.entityData.locked %}
+              <!-- DESTROY -->
+              <div class='dropdown-divider'></div>
+              <a href='#' data-action='destroy-template' class='dropdown-item hover-danger' data-id='{{ Entity.id }}'>
+                <i class='fas fa-trash-alt fa-fw mr-1'></i>{{ 'Destroy template'|trans }}
+              </a>
+            {% endif %}
+          </div>
+        </div>
+      {% endif %}
     <hr>
   </div>
 </div>
