--- a/src/templates/view-edit-template.html
+++ b/src/templates/view-edit-template.html
@@ -144,7 +144,7 @@
     <div data-save-hidden='metadataDiv' class='col-md-6 mt-4'>
       {# this div is filled in JS by Metadata.class.ts edit() #}
       <div id='metadataDiv'></div>
-      <button type='button' data-action='toggle-modal' data-target='fieldBuilderModal' class='btn btn-primary mt-3 row'>{{ 'Add field'|trans }}</button>
+      <button type='button' data-action='toggle-modal' data-target='fieldBuilderModal' class='btn btn-secondary mt-3 row'>{{ 'Add field'|trans }}</button>
     </div>
     <hr>
     {% set mode = 'edit-template' %}
